<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.example.abedaigorou.thirdeye.configure.SeekbarPreference
        android:key="@string/key_cameraposition_preference"
        android:title="カメラ位置"
        android:defaultValue="50"
        />
    <EditTextPreference
        android:defaultValue="10"
        android:key="@string/key_devidelongitude_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="分割数（緯度方向）"
        android:summary="10"/>

    <EditTextPreference
        android:defaultValue="10"
        android:key="@string/key_devidelatitude_preference"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="分割数（経度方向）"
        android:summary="10"/>


</PreferenceScreen>